wip: added external API for requests to enrich DB
